--- a/analyticshandler/build.gradle
+++ b/analyticshandler/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'com.google.firebase:firebase-analytics:17.1.0'
-    implementation 'com.mixpanel.android:mixpanel-android:5.6.4'
+    api 'com.google.firebase:firebase-analytics:17.1.0'
+    api 'com.mixpanel.android:mixpanel-android:5.6.4'
+    api 'com.flurry.android:analytics:11.4.0@aar'
 }
