--- a/analyticshandler/build.gradle
+++ b/analyticshandler/build.gradle
@@ -7,7 +7,7 @@ android {
 
 
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -33,4 +33,8 @@ dependencies {
     api 'com.google.firebase:firebase-analytics:17.1.0'
     api 'com.mixpanel.android:mixpanel-android:5.6.4'
     api 'com.flurry.android:analytics:11.4.0@aar'
+    api 'com.appsee:appsee-android:+'
+    api 'com.amazonaws:aws-android-sdk-core:2.3.5'
+    api 'com.amazonaws:aws-android-sdk-pinpoint:2.3.5'
+    api 'com.facebook.android:facebook-android-sdk:[5,6)'
 }
