--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,9 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.gforeroc.analytics"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 29
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -33,4 +34,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation project (':analyticshandler')
+    implementation 'com.android.support:multidex:1.0.3'
+
 }
